--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome To The Nginx Web Server Home Page</title>
+    <title>Welcome to the Nginx Web Server Home Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
