--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Welcome to the Nginx Web Server Home Page!</h1>
         <p>This is a simple HTML page served by Nginx.</p>
-        <p>Your Nginx server is configured correctly.</p>
+        <p>Your Nginx server is configured and running correctly.</p>
         <div class="footer">
             <p>©2024 Nginx Server!</p>
         </div>
